# SCURM_SentryNavigation

./: .dockerignore  .gitignore  DevcontainterGuide.md  Dockerfile  README.md
.devcontainer/: devcontainer.json
BehaviorTree.CPP/: package.xml
BehaviorTree.CPP/src/controls/: reactive_fallback.cpp
FAST_LIO/: CMakeLists.txt
FAST_LIO/launch/: mapping.launch.py
FAST_LIO/rviz_cfg/: loam_livox.rviz
auto_aim_interfaces/msg/: Armor.msg  Armors.msg  Target.msg
autonomous_exploration_development_environment/: .gitignore  README.md
autonomous_exploration_development_environment/src/terrain_analysis/: CMakeLists.txt  Readme.md
autonomous_exploration_development_environment/src/terrain_analysis_ext/: CMakeLists.txt  ReadMe.md
cmd_chassis/: CMakeLists.txt  ReadMe.md  package.xml
cmd_chassis/src/: fake_joint.cpp  rot_imu.cpp  twist2chassis_cmd.cpp  twist_transformer.cpp
control_panel/: package.xml  setup.cfg  setup.py
control_panel/control_panel/: gui.py  publisher.py
icp_relocalization/launch/: icp.launch.py  sac_ia_gicp.launch.py
icp_relocalization/src/: icp_node.cpp
livox_ros_driver2/: CMakeLists.txt  README.md  package.xml
livox_ros_driver2/config/: display_point_cloud_ROS1.rviz  display_point_cloud_ROS2.rviz
livox_ros_driver2/launch_ROS1/: msg_HAP.launch  msg_MID360.launch  msg_mixed.launch  rviz_HAP.launch  rviz_MID360.launch  rviz_mixed.launch
livox_ros_driver2/launch_ROS2/: msg_HAP_launch.py  msg_MID360_launch.py  rviz_HAP_launch.py  rviz_MID360_launch.py  rviz_mixed.py
livox_ros_driver2/src/: lddc.cpp  livox_ros_driver2.cpp
nav2_plugins/behavior_ext_plugins/: CMakeLists.txt  behavior_ext_plugins.xml  package.xml
nav2_plugins/behavior_ext_plugins/include/behavior_ext_plugins/: back_up_twz_free_action.hpp
nav2_plugins/behavior_ext_plugins/plugins/: back_up_twz_free_action.cpp
nav2_plugins/costmap_intensity/: CMakeLists.txt  README.md  costmap_intensity.xml  package.xml
nav2_plugins/costmap_intensity/include/costmap_intensity/: obstacle_layer.hpp  voxel_layer.hpp
nav2_plugins/costmap_intensity/plugins/: obstacle_layer.cpp  voxel_layer.cpp
nav2_plugins/nav2_costmap_2d/src/: costmap_topic_collision_checker.cpp
nav2_plugins/nav2_mppi_controller_ext/: CMakeLists.txt  README.md  critics_ext.xml  mppic_ext.xml  package.xml
nav2_plugins/nav2_mppi_controller_ext/src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
nav2_plugins/velocity_smoother_ext/: CMakeLists.txt  package.xml
nav2_plugins/velocity_smoother_ext/src/: main.cpp  velocity_smoother_ext.cpp
nav2_plugins/velocity_smoother_ext/test/: CMakeLists.txt  test_velocity_smoother_ext.cpp
performance_analysis/: Odometry_fast_lio.tum  ana_cost.py  chassis_calib.py  evo_traj.md  state_estimation_point_lio.tum  state_estimation_point_lio_gird.tum
performance_analysis/SLAM/: fast-lio-sam.tum  fast-lio.tum  point-lio.tum  relocalization.tum
performance_analysis/data_mid360/: data_mid360_acc_x.txt  data_mid360_acc_y.txt  data_mid360_acc_z.txt  data_mid360_gyr_t.txt  data_mid360_gyr_x.txt  data_mid360_gyr_y.txt  data_mid360_gyr_z.txt  data_mid360_sim_acc_x.txt  data_mid360_sim_acc_y.txt  data_mid360_sim_acc_z.txt  data_mid360_sim_gyr_x.txt  data_mid360_sim_gyr_y.txt  data_mid360_sim_gyr_z.txt  mid360_imu_param.yaml
performance_analysis/li_init_lidar_imu_calib/: Initialization_result.txt
performance_analysis/planning/: AStar.txt  Dijkstra.txt  Smac.txt  ThetaStar.txt  plansave.py
performance_analysis/smoother/: SavitzkyGolaySmoother.txt  SimpleSmoother.txt  cons.txt  raw.txt  result.txt
rm_decision_cpp/: CMakeLists.txt  README.md  package.xml
rm_decision_cpp/behavior_tree/: RMUC_blue.xml  RMUC_blue2.xml  RMUC_red.xml  RMUC_red2.xml  RMUL.xml  patrol.xml  rm_behavior_tree.btproj  test_align_chassiss.xml  test_antiautoaim.xml  test_control_gimbal.xml  test_nav.xml  test_nav_att.xml  tree_nodes.xml
rm_decision_cpp/config/: node_params.yaml
rm_decision_cpp/include/rm_decision_cpp/: custume_types.hpp
rm_decision_cpp/include/rm_decision_cpp/behaviors/: align_chassis.hpp  anti_autoaim.hpp  attack.hpp  control_gimbal.hpp  nav2pose.hpp  sentry_cmd.hpp  spin.hpp  topics2blackboard.hpp
rm_decision_cpp/launch/: run.launch.py
rm_decision_cpp/src/: custume_types.cpp  tree_exec_node.cpp
rm_decision_cpp/src/behaviors/: align_chassis.cpp  anti_autoaim.cpp  attack.cpp  control_gimbal.cpp  nav2pose.cpp  sentry_cmd.cpp  spin.cpp  topics2blackboard.cpp
rm_decision_cpp/test/: test_tree_exec_node.cpp
rm_hardware_driver/rm_base/: CMakeLists.txt  README.md  protocol.md
rm_hardware_driver/rm_base/src/: robot_base_node.cpp
rm_hardware_driver/rm_base/test/: CMakeLists.txt  test_event_data_processor.cpp  test_hurt_data_processor.cpp  test_power_heat_data_processor.cpp  (+6 more)
rm_hardware_driver/rm_interfaces/: CMakeLists.txt
rm_interfaces/: package.xml
sentry_bringup/: CMakeLists.txt  ReadMe.md  package.xml
sentry_bringup/behavior_tree/: nav_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml  navigate_through_pose_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml  navigate_w_recovery_and_replanning_only_if_path_becomes_invalid.xml
sentry_bringup/launch/: bringup_all_in_one.launch.py  mapping.launch.py  navigation.launch.py  octomap_server_intensity.launch.py  relocalization.launch.py  view_map.py
sentry_bringup/maps/: RMUL.yaml  rmuc2024.yaml  test_map.yaml
sentry_bringup/params/: fast_lio_mapping_param.yaml  fast_lio_relocalization_param.yaml  fast_lio_sam_mapping_param.yaml  nav2_params.yaml  segmentation_params.yaml
sentry_bringup/rviz/: compare.rviz  nav2_default_view.rviz
sentry_description/: CMakeLists.txt  package.xml
sentry_description/launch/: view_model.launch.py  view_model.rviz
sentry_description/meshes/: base_link.STL  camera_link.STL  gimbal_odom.STL  lidar_link.STL  pitch_link.STL  shoot_link.STL  yaw_link.STL
sentry_description/urdf/: sentry_description.urdf
(+78 files in other folders)
