<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_panel</name>
  <version>2.3.0</version>
  <author email="1367256900@qq.com">Polaris Xia</author>
  <description>A simpe Qt GUI to simulate the referee system.</description>
  <maintainer email="1367256900@qq.com">Polaris Xia</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
